--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Notes App</title>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Notes App - Chandra</title>
 
-        <link rel="stylesheet" href="/src/styles/style.css" />
-    
-	</head>
-	<body>
-		<script type="module" src="/src/app.js"></script>
-	</body>
+    <link rel="stylesheet" href="src/styles/style.css" />
+  </head>
+  <body>
+    <header></header>
+    <main></main>
+    <footer></footer>
+    <script type="module" src="src/app.js"></script>
+  </body>
 </html>
