chore : show notes

--- a/index.html
+++ b/index.html
@@ -20,8 +20,18 @@
     <header>
       <app-bar></app-bar>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <div class="container">
+        <section>
+          <div class="note-list-container" id="noteListContainer">
+            <note-list></note-list>
+          </div>
+        </section>
+      </div>
+    </main>
+    <footer>
+      <footer-bar></footer-bar>
+    </footer>
     <script type="module" src="src/app.js"></script>
   </body>
 </html>
