feat : add modal form input note

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <note-list></note-list>
           </div>
         </section>
+        <section class="notes-form" id="notes-form">
+          <flying-button></flying-button>
+          <note-form></note-form>
+        </section>
       </div>
     </main>
     <footer>
