chore : update validation code

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
         <section class="notes-form" id="notes-form">
           <flying-button></flying-button>
-          <note-form></note-form>
+          <note-form show="true"></note-form>
         </section>
       </div>
     </main>
