--- a/archive.html
+++ b/archive.html
@@ -13,6 +13,9 @@
     <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
+
+    <!-- Google icon -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
     <header>
@@ -21,49 +24,10 @@
     <main>
       <div class="container">
         <section>
+          <h4>Arhived Notes</h4>
           <div class="note-list-container" id="noteListContainer">
             <note-list></note-list>
           </div>
-        </section>
-        <section class="notes-form" id="notes-form">
-          <button class="flying-button">+</button>
-          <div class="form-wrapper">
-            <form id="note-form">
-              <h3>Add Note</h3>
-              <div className="input-title-wrapper">
-                <input
-                  type="text"
-                  placeholder="Note Title"
-                  required
-                  pattern="^[a-zA-Z0-9,. ]*$"
-                  maxlength="50"
-                  id="title"
-                  aria-describedby="titleValidation"
-                  autocomplete="off"
-                  name="title"
-                />
-                <p id="titleValidation" class="validation-message" aria-live="polite"></p>
-              </div>
-              <div className="input-body-wrapper">
-                <textarea
-                  id="desc-note"
-                  cols="30"
-                  rows="10"
-                  placeholder="Body Note"
-                  required
-                  maxlength="255"
-                  autocomplete="off"
-                  aria-describedby="bodyValidation"
-                  name="body"
-                ></textarea>
-                <p id="bodyValidation" class="validation-message" aria-live="polite"></p>
-              </div>
-
-              <button type="submit">Submit</button>
-            </form>
-          </div>
-          <!-- <flying-button></flying-button> -->
-          <!-- <note-form show="true"></note-form> -->
         </section>
       </div>
     </main>
