--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
+
+    <!-- Google icon -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
     <header>
@@ -62,8 +65,6 @@
               <button type="submit">Submit</button>
             </form>
           </div>
-          <!-- <flying-button></flying-button> -->
-          <!-- <note-form show="true"></note-form> -->
         </section>
       </div>
     </main>
